refactor: replace remove with an removeLast